Mon Jun 10 23:51:51 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* array.c (rb_ary_new_from_values): fix a typo. pointed out by
	  nagachika.
	  http://d.hatena.ne.jp/nagachika/20130610/ruby_trunk_changes_41199_41220

Mon Jun 10 21:51:03 2013  Kouhei Sutou  <kou@cozmixng.org>

	* ext/socket/raddrinfo.c (nogvl_getaddrinfo): Fix indent.

Mon Jun 10 21:49:43 2013  Kouhei Sutou  <kou@cozmixng.org>

	* ext/socket/raddrinfo.c (nogvl_getaddrinfo): Add missing return
	  value assignment.

Mon Jun 10 20:58:11 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/raddrinfo.c (nogvl_getaddrinfo): work around for Ubuntu
	  13.04's getaddrinfo issue with mdns4. [ruby-list:49420]

Mon Jun 10 19:34:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): Returns sign instead of words.
	  (absint_numwords_generic): Follow the above change.
	  (big2str_base_powerof2): Follow the above change.

	* internal.h: Ditto.

	* hash.c (rb_hash): Ditto.

	* pack.c (pack_pack): Ditto.

	* random.c (int_pair_to_real_inclusive): Ditto.
	  (rand_init): Ditto.
	  (random_load): Ditto.
	  (limited_big_rand): Ditto.

	* time.c (v2w_bignum): Ditto.

Mon Jun 10 17:20:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_remember): permit promoted object.
	  (rb_gc_writebarrier -> remember)

Mon Jun 10 17:14:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTE): fix parameter name (`x' to `obj')
	  and make it inline function (like RVALUE_PROMOTE).

Mon Jun 10 16:22:50 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_new_from_values): add assertion
	  (ary should be young object).

Mon Jun 10 16:05:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (wmap_mark): check allocation of `w->obj2wmap'.
	  (no-allocation `w->obj2wmap' will be NULL pointer reference)

Mon Jun 10 15:36:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): use checking functions instead of
	  catching exceptions.
